examples/non-examples/error.golden
Error at phase p0: error.kl:3.18-3.34: "It went wrong."
