examples/non-examples/error.kl
#lang kernel

(example (error '"It went wrong."))

